Fixed spacing

--- a/style.css
+++ b/style.css
@@ -55,7 +55,8 @@ footer {
     background-color: #343a40; /* Dark gray background */
     padding: 10px 20px;
     border-radius: 8px;
-    margin: 10px auto;
     width: 60%;
     text-align: center;
+    margin: 5px auto 0 auto; /* Reduces space below */
 }
+
